crates/toml/tests/snapshots/invalid/ext/table/ml_basic_string.stderr
TOML parse error at line 1, column 4
  |
1 | ["""table"""]
  |    ^
invalid table header
expected `.`, `]`
